--- a/translations/messages+intl-icu.et.yaml
+++ b/translations/messages+intl-icu.et.yaml
@@ -64,12 +64,12 @@ coachingImage.leftColumn.img.alt: __coachingImage.leftColumn.img.alt
 coachingImage.leftColumn.p.1: '<strong>KELLELE ON IMAGO COACHING MÕELDUD?</strong><br><br><u>Imago coaching on sinu jaoks, kui :</u><br><br>-sa tahad ennast <strong>paremini tundma õppida</strong><br>-sa sooviksid <strong>aktsepteerida ja armastada</strong> kõike, mida sa enda kohta tead: nii oma valgust kui varje.<br>-oled valmis <strong>investeerima mõned nädalad</strong> enda ja ka oma garderoobiga (kui see peaks vajalik olema) tegelemisse.<br>-sa tunned, et oled kutsutud oma kuvandi <strong>esteetilises tajumises kaugemale minema</strong><br>-sa soovid arendada autentset stiili, mis on <strong>100% kooskõlas</strong> sellega, kes sa oled.<br><br><u>Imago coaching ei ole sinu jaoks, kui:</u><br><br>-sa tahad kiireid tulemusi<br>-sa otsid lihtsalt stiilinõustamist<br>-sa ei ole valmis end uurima ning arvad, et tunned ennast piisavalt hästi.<br>-sa ei ole huvitatud oma imago füüsilisest dimensioonist.'
 coachingImage.button.services: Teenused
 fabienne.title.p: 'Imago coach - "Heaolu looja läbi imago"<br><br>Olen <strong>ainus coach Eestis,</strong> kelle eriala on imago.'
-fabienne.leftColumn.p.1: 'Olen alati arvanud, et esmatähtis teiste inimestega suhtlemise juures on just meie imago. Pärast seda, kui olin pühendanud aastaid erinevates töösektorites töötamisele, sain aru, et armastan aidata inimestel tunda end paremini ning elegantselt. Asutasin Fabimage 2019 aastal eesmärgiga aidata sul <strong>end oma kehas tunda nii hästi kui võimalik.</strong><br><br>Minu roll seisneb selles, et pakun sulle kogenud tööriistu, mis aitavad sul luua <strong>isikliku stiili,</strong> mis on kooskõlas sellega, kes sa oled ja <strong>garderoob, mis räägib sinu sisemisest ilust.</strong><br><br><strong>Olen prantslanna,</strong> kuid kaua elanud Eestis ja tunnen, et <strong>minus on peidus ka eestlanna!</strong><br><br><strong>Minu enda minapilt?</strong><br><br>See on värviline, soliidne, tundlik, sügav ja pidevas arengus!<br>Olen üsna sügavmõtteline inimene, idealistlik, veidi tagasihoidlik, kuid kirglik inimsuhete suhtes ja ennekõike väga noorusliku meelega 😊 Mulle meeldib väga sõpradega koos olla. Mul on tähelepanelik kõrv, mis kuulab inimesi, kes tahavad mulle midagi usaldada. Mulle meeldib väga mõelda ning jõuda asjade tuumani. Inimesed ütlevad, et mul on suur süda.<br><br>Ma võin kanda meiki või mitte, aga väga harva käin ilma huulepulgata. Olen keskmist kasvu, pähkelpruunide silmade, üsna heleda naha ja sirgete kastanpruunide juustega. Hoolimata mu katsetustest teiste soengutega, tulevad A-line bob lõikused ikka ja jälle tagasi nagu lemmiklaulu refrään.<br><br>Mulle meeldib naerda, mul on huumorimeel, mida alati ei mõisteta 😊 Ma nutan, kui mind tõesti liigutab mingi lugu, näiteks filmi vaadates. Või muutun rõõmsaks Jean Jacques Goldmani (Je te donne), Zazi, Curly Stringsi, El Arrebato ja paljude teiste kuulamisest. Mulle meeldib rääkida ja lugusid jutustada. Kui olen usaldavas õhkonnas, võin mitte enam pidama saada!<br><br>Usaldus on üks teemadest, millega ma töötasin oma imago-coachingu koolituse ajal, mille käigus läbisin täiesti ümberkujundava in & out protsessi, mis viis mind sinna, kus ma praegu olen. Nii et ma ise käisin läbi selle imelise teekonna, mida sulle täna pakun. Ja ma garanteerin sulle: <strong>kui sulle meeldib mõte töötada oma tervikliku imago kallal, siis see on seda tõesti väärt!</strong> Täna naudin autentsemat ja vaba stiili!<br><br>Avasta võimalused, kuidas saan sinu heaolu ja stiili arendada!'
+fabienne.leftColumn.p.1: 'Olen alati arvanud, et esmatähtis teiste inimestega suhtlemise juures on just meie imago. Pärast seda, kui olin pühendanud aastaid erinevates töösektorites töötamisele, sain aru, et armastan aidata inimestel tunda end paremini ning elegantselt. Asutasin Fabimage 2019 aastal eesmärgiga aidata sul <strong>end oma kehas tunda nii hästi kui võimalik.</strong><br><br>Minu roll seisneb selles, et pakun sulle kogenud tööriistu, mis aitavad sul luua <strong>isikliku stiili,</strong> mis on kooskõlas sellega, kes sa oled ja <strong>garderoob, mis räägib sinu sisemisest ilust.</strong><br><br><strong>Olen prantslanna,</strong> kuid kaua elanud Eestis ja tunnen, et <strong>minus on peidus ka eestlanna!</strong><br><br><strong>Minu enda minapilt?</strong><br><br>See on värviline, soliidne, tundlik, sügav ja pidevas arengus!<br>Olen üsna sügavmõtteline inimene, idealistlik, veidi tagasihoidlik, kuid kirglik inimsuhete suhtes ja ennekõike väga noorusliku meelega 😊 Mulle meeldib väga sõpradega koos olla. Mul on tähelepanelik kõrv, mis kuulab inimesi, kes tahavad mulle midagi usaldada. Mulle meeldib väga mõelda ning jõuda asjade tuumani. Inimesed ütlevad, et mul on suur süda.<br><br>Ma võin kanda meiki või mitte, aga väga harva käin ilma huulepulgata. Olen keskmist kasvu, pähkelpruunide silmade, üsna heleda naha ja sirgete kastanpruunide juustega. Hoolimata mu katsetustest teiste soengutega, tulevad <i>A-line bob</i> lõikused ikka ja jälle tagasi nagu lemmiklaulu refrään.<br><br>Mulle meeldib naerda, mul on huumorimeel, mida alati ei mõisteta 😊 Ma nutan, kui mind tõesti liigutab mingi lugu, näiteks filmi vaadates. Või muutun rõõmsaks Jean Jacques Goldmani, Zazi, Curly Stringsi, El Arrebato ja paljude teiste kuulamisest. Mulle meeldib rääkida ja lugusid jutustada. Kui olen usaldavas õhkonnas, võin mitte enam pidama saada!<br><br>Usaldus on üks teemadest, millega ma töötasin oma imago-coachingu koolituse ajal, mille käigus läbisin täiesti ümberkujundava in & out protsessi, mis viis mind sinna, kus ma praegu olen. Nii et ma ise käisin läbi selle imelise teekonna, mida sulle täna pakun. Ja ma garanteerin sulle: <strong>kui sulle meeldib mõte töötada oma tervikliku imago kallal, siis see on seda tõesti väärt!</strong> Täna naudin autentsemat ja vaba stiili!<br><br>Avasta võimalused, kuidas saan sinu heaolu ja stiili arendada!'
 fabienne.Idiscover: Avastan
 fabienne.AFIPP: 'AFIPP - <a href="https://www.afipp.org/">Association Francophone pour l''Image et la Posture Professionnelle</a> (Prantsuse  professionaalse imago ja hoiaku ühing).<br><br>AFIPP on prantsuse imago konsultantide ametlik ühing, mille liige olen alates märtsist 2020. Oleme elukutselised imago konsultandid ja coachid, naised ja mehed, kellel on ühine soov arendavas keskkonnas kogemusi vahetada, end toimuvaga kursis hoida, parandada oma töökvaliteeti, et säilitada kõrge professionaalne tase.'
 service.index.p.1: 'Õpi ennast paremini tundma ja täiusta oma stiili, et see peegeldaks seda, kes sa oled!<br><br>Kasutades <strong>järeleproovitud</strong> meetodit, mis on <strong>uuenduslik ja ainulaadne</strong> Eesti turul, töötan sinuga <strong>kolmemõõtmelise</strong> coachinguga: sinu sisemine imago, sinu kehapilt ja sinu väline kuvand.<br><br>Imago coachingu teenus, mis iganes see ka poleks, on alati <strong>sügavalt inimlik lähenemine,</strong> mis ei koosne lineaarsest programmist. See sõltub sinu eesmärgist, ootustest ja vajadustest sel hetkel. Seetõttu võib seansside arv vastavalt sinu edusammudele veidi varieeruda.<br><br>Minu kasutatav metoodika on <strong>toetav</strong>, mitte nõuandev, mis tähendab, et sa pead ise <strong>panustama</strong> oma protsessi: eesmärgid, ülesanded ja plaanid, mille me koos välja töötame.'
 service.index.p.2: 'Kõik teenused on saadaval nii <strong>videokonverentsil</strong> kui ka <strong>kohapeal*</strong> ja neid kahte võimalust saab ka <strong>kombineerida!</strong><br><br>Coaching-paketid toimuvad täiesti <strong>personaalsete 1:1 seansside</strong> vormis. Pärast mõningaid seansse saad <strong>isikliku dokumendi,</strong> milles on välja toodud punktid, mida oleme läbi töötanud.<br><br>Coaching-sessioonid kestavad 60-90 minutit.<br><br>Pakettide juurde kuulub <strong>tasuta 30-minutiline esmane kontakt,</strong> mille käigus saad vajalikke selgitusi ja esitada küsimusi, ning mille järel saad kinnitada oma otsust jätkata valitud teel.'
-service.show.appointment: "kohtumist kokku leppima"
+service.show.appointment: 'kohtumist kokku leppima'
 workshop.index.p.1: 'Fabimage pakub temaatilisi õpitubasid, mille eesmärk on aidata osalejatel sobitada kokku oma välimus, keha ja isiksus.<br>Õpitubade eelis on <strong>grupidünaamika.</strong> Õpitoad soodustavad mõttevahetust osalejate vahel ning aitavad end paremini tundma õppida tänu sõbralikule ja <strong>heasoovlikule</strong> õhkkonnale, mis on ühtlasi Fabimage üks oluline väärtus.<br>Õpid oma imagot väärtustama mänguliselt ja rikastavalt!<br>Lisaks on õpitoad soodsaks alternatiiviks isiklikule imago teenusele.<br><br>Koosveedetud aeg aitab meil:<br>-mõelda ja esitada endale küsimusi <strong>imago tähenduse</strong> kohta,<br>-teadvustada endale <strong>oma imago sõnumit,</strong><br>-seostada <strong>enesehinnang ja eneseimago</strong><br>-leida <strong>enesearengu</strong> võimalusi ning edeneda nii isiklikus kui professionaalses elus.<br><br>Õpituba saab tellida ka enda poolt moodustatud grupile.'
 navbar.frenchFlag: __navbar.frenchFlag
 navbar.spanishFlag: __navbar.spanishFlag
@@ -84,7 +84,7 @@ contact.workshop.form.choice.info: 'Info küsimine'
 contact.workshop.form.client.particular: Eraisik
 contact.workshop.form.business: Firma
 contact.workshop.form.AssociationSchool: 'Ühing, kool'
-home.video.link: 'https://www.youtube.com/embed/F-IvyQHEPnc'
+home.video.link: 'https://www.youtube.com/embed/ef5VBpHztIU'
 navbar.deconnect: 'Logi välja'
 Fabienne.title: 'Ainukene Coach Eestis, kelle eriala on imago'
 contact.workshop.form.agreements.info: 'Recogemos estos datos para enviarle la información/presupuesto que ha solicitado por correo electrónico. También utilizamos su dirección de correo electrónico para enviarle información sobre nuestros servicios.<br><br>Si no desea recibir este tipo de correos, marque la casilla siguiente:'
@@ -99,7 +99,7 @@ company.top-section-list.list.style: '<strong>Stiil ja mitteverbaalne suhtlus:</
 company.top-section-list.list.image: '<strong>Imago ja sotsiaalvõrgustikud:</strong> erinevuse äratundmine tegelikkuse ja sotsiaalvõrgustikes pakutava "konstrueeritud" maailma vahel.'
 company.top-section-list.list.modeEthic: '<strong>Eetiline ja jätkusuutlik mood:</strong> hakata mõtlema sellele, kuidas me tarbime ja millistel tingimustel meie riideid toodetakse.'
 company.top-section.text.contactMe: 'Kas olete huvitatud? Võtke minuga julgelt ühendust!'
-company.button.contact: contact
+company.button.contact: kontakti
 company.bottom-section.title: Ettevõtted
 company.bottom-section.text: "Fabimage'i imagokoolitused on mõeldud teie ettevõtte töötajatele. <strong>Inimmeeskond</strong> on <strong>ettevõtte kõige väärtuslikum vara,</strong> sest just meeskond kannab edasi ettevõtte kuvandit ja väärtusi. Seetõttu on oluline, et kõik ettevõtte töötajad oleksid teadlikud oma imagost, oskaksid seda hallata ja optimeerida.<br><br>Teadvustage oma töötajatele <strong>imago rolli suhtlemisel!</strong><br><br>Ma saan teid aidata kahel viisil:"
 company.bottom-section.ol.accompaniedMember: 'Ma võin teie <strong>meeskonnaliikmega kaasas käia</strong> imago hindamisel või ulatuslikumal coaching-protsessil. Imago on teie esimene visiitkaart.'
@@ -119,7 +119,56 @@ service.index.body.title: 'Mida sinu jaoks tähendab olla autentne ?'
 service.index.myOffer: 'Minu teenused'
 service.index.admin.newService: 'luua uus teenus'
 workshop.index.body.title: Õpitoad
-home.quote: "<< Minu arusaamises imago coachingust ei ole ilu standardit, tõeline ja ainus ilu on sinu. Sinu sees on valgus, mis lihtsalt ootab, et särada! >>"
-workshop.index.admin.newWorkshop: "Looge uus töökoda"
-navbar.book: "Minu raamatud"
+home.quote: '<< Minu arusaamises imago coachingust ei ole ilu standardit, tõeline ja ainus ilu on sinu. Sinu sees on valgus, mis lihtsalt ootab, et särada! >>'
+workshop.index.admin.newWorkshop: 'Looge uus töökoda'
+navbar.book: 'Minu raamatud'
 navbar.user: __navbar.user
+book.buy: Ostan
+book.update: Uuendama
+book.createNewBook: 'Looge uus raamat'
+contact.send: Saada
+Service.readMore: 'Loe rohkem'
+workshop.update: värskendada
+workshop.createCommentary: 'Loo kommentaar'
+workshop.updateCommentary: 'Uuenda kommentaariumit'
+giftCard.index.h1: 'Fabimage kinkekaart'
+giftCard.index.p: 'Kinkekaardi tellimiseks palun täitke allpool paiknev tellimise vorm.<br><br>Hiljemalt tellimuse saatmisele järgneval tööpäeval saadan teile arve e-posti aadressile ning peale arve tasumist postitan kinkekaardi teie poolt sisestatud aadressile või soovi korral lepime järeletulemiseks aja kokku (Süda tn 13, kesklinnas).<br><br>Küsimuste korral võtke minuga ühendust : fabimage.coach@gmail.com'
+giftCard.index.form.service: 'Teenuse nimetus'
+giftCard.index.form.name: 'Kinkekaardi tellija/maksja nimi ja perekonnanimi'
+giftCard.index.form.phoneNumber: 'Tellija telefoninumber'
+giftCard.index.form.email: 'Tellija e-post'
+giftCard.index.form.beneficiaryName: 'Kinkekaardi saaja nimi ja perekonnanimi'
+giftCard.index.form.p: 'Tavapostiga saatmiseks jätke enda või kinkekaardi saaja kodune aadress, kuhu kinkekaardi saadan.'
+giftCard.index.form.isComing: 'Tulen ise järele'
+giftCard.index.form.commentary: 'Märkused (nt sooduskood...)'
+giftCard.button: 'Tellin kinkekaardi'
+giftCard.index.sent: 'Teie tellimus on saadetud'
+home.giftCard.title: 'Fabimage kinkekaart'
+book.download: 'lae alla'
+book.index.promotionalCode: Sooduskood
+book.index.wrongCode: 'See sooduskood on kehtetu'
+book.buyed.hello: Tere
+book.buyed.email.p: 'Mul on hea meel kinnitada Sinu tellimus.<br><br>Ma olen rõõmus, et oled huvitatud minu seitsme universaalse stiili juhendist. Sain selleks inspiratsiooni omaenda teekonnast, mil katsetasin neid ükshaaval enda peal mitme kuu jooksul!<br><br>Minu tõeline lootus seda Sinuga jagades on, et Sa valid kõige efektiivsema, kiirema ja säästlikuma tee, et saada endale garderoob, mis peegeldab Sind, millega oled 100% rahul ja milles Sa tunned end imeliselt ja enesekindlalt.<br><br>See on minu esimene e-raamat ja see on Sulle mõeldud! Loodan, et loed seda hoolikalt ja hakkad oma ideaalset garderoobi ehitama sisemistest tugevustest lähtuvalt, jättes kõrvale kõik, mis piirab sinu sisemist heaolu.<br><br>Kui Sul on selle sisu kohta kommentaare, siis palun jaga neid minuga julgelt!<br><br>Tänan Sind usalduse eest ja kohtumiseni peagi www.fabimage.coach !'
+book.index.buyedBook: 'Sulle saadetakse e-kiri, mis kinnitab sinu ostu ja sisaldab linki e-raamatu allalaadimiseks. Kui sa kirja ei saa, kontrolli oma rämpsposti kausta.<br><br>Küsimuste korral palun kirjuta: fabimage.coach@gmail.com'
+downloadBook: '[Lae oma juhend nüüd alla].'
+book.buyed.email.p.end: 'Fabienne Chmara, Coach, Heaolu looja läbi imago Fabimage.coach@gmail.com'
+coachingImage.iframe.p: 'Kas <strong>imago ja stiil</strong> on üks ja seesama asi? Mis takistab meid olemast meie ise ja kust saame <strong>inspiratsiooni</strong>, et jääda ehedaks? Miks ma räägin nii palju <strong>enese tundmisest</strong> ja mis see täpselt on? Kuidas parandada oma imagot?<br><br>Vastan Risto küsimustele imago ja stiili kohta Õpetajate Maja podcastis.'
+book.head.title: 'Imago coachingu juhendid'
+book.head.metaDescription: 'Juhendid, mis inspireerivad teid ja aitavad teil arendada autentsemat stiili'
+contact.head.title: 'Võtke ühendust Fabienne Chmara’ga – Imago coach'
+contact.head.metaDescription: 'Võtke minuga julgelt ühendust, mul on hea meel teiega vestelda'
+home.head.title: 'Imago coach - Heaolu ja eneseareng läbi imago - Fabimage Tallinn'
+coachingImage.head.title: 'Imago coaching - Eneseareng ja heaolu läbi imago - Fabimage'
+coachingImage.head.metaDescription: 'Enesetundmise meetod, kus me õpime aktsepteerima ja armastama ennast. Imago coaching-protsess põhineb imago kolmel dimensioonil: sisemine imago, keha ja välimus.'
+company.head.title: 'Imago coaching noortele ja ettevõtetele'
+company.head.metaDescription: 'Isiklik eneseteostus läbi minapildi'
+Fabienne.head.title: 'Fabienne Chmara - Ainukene Coach Eestis, kelle eriala on imago'
+Fabienne.head.metaDescription: 'Heaolu looja läbi imago. Loo elegantselt ja professionaalselt sisustatud riidekapp, mis on vastavuses sinu sisemise imagoga. Olen prantslanna, kuid kaua elanud Eestis ja tunnen, et minus on peidus ka eestlanna!'
+service.head.metaDescription: 'Õpi ennast paremini tundma ja täiusta oma stiili, et see peegeldaks seda, kes sa oled!'
+service.head.title: 'Teenused – Fabienne Chmara - Fabimage'
+workshop.head.metaDescription: 'Õpid oma imagot väärtustama mänguliselt ja rikastavalt'
+workshop.head.title: 'Õpitoad ja Online meistriklassid'
+home.head.metaDescription: 'Autentne stiil on paljudele meist unistuseks. Ja see ongi Fabimage imago coachingu meetodi lubadus!'
+book.index.error: 'Teie makset ei saanud sooritada'
+commentaryHome.new: 'Loo uus kommentaar'
+commentaryHome.edit: "Muuda kommentaari"
